Add &rarr; to the links in <cite>

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -102,6 +102,10 @@
     color: $color-minor;
     text-transform: uppercase;
     font-size: 15px;
+
+    cite a:after {
+      content: ' \2192';
+    }
   }
 
   .permalink {
