Update about info

--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -17,7 +17,7 @@
   <body>
     <header class="top">
       <div class="about">
-        <p><h1><a href="{BlogURL}">Content/Discontent</a></h1> is a place where I gather educational and inspirational quotations from books, articles and other writings that I read. Collected by <a href="http://lamberski.com">Maciej Lamberski</a>.</p>
+        <p><h1><a href="{BlogURL}">Content/Discontent</a></h1> is a place where I gather educational and inspirational quotations from books, articles and other pieces of writing. Collected by <a href="http://lamberski.com">Maciej Lamberski</a>.</p>
       </div>
     </header>
 
