--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $breakpoint-tablet: 1024px;
 $breakpoint-phablet: 768px;
 $breakpoint-phone: 480px;
 
-$rythm-tick: 30px;
+$rythm-tick: 1.66rem;
 
 $color-accent: #ffcd44;
 $color-base: #313130;
