--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <header class="top">
-        <p><h1><a href="{BlogURL}">Ubermost</a></h1> is a non-daily dose of insightful snippets from books and other pieces of writing. On entrepreneurship, motivation, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" class="fa fa-twitter"></a>.</p>
+        <p><h1><a href="{BlogURL}">Ubermost</a></h1> is a non-daily dose of insightful snippets from books and other pieces of writing. On entrepreneurship, motivation, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" title="Ubermost on Facebook" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" title="Ubermost on Instagram" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" title="Ubermost on Twitter" class="fa fa-twitter"></a>.</p>
       </header>
 
       {block:Posts}
@@ -28,7 +28,7 @@
             <div>{Quote}</div>
             <footer>
               {block:Source}&mdash; <cite>{Source}</cite>{/block:Source}
-              {block:IndexPage}<a href="{Permalink}" class="permalink"><i class="fa fa-link"></i></a>{/block:IndexPage}
+              {block:IndexPage}<a href="{Permalink}" class="permalink" title="Permalink"><i class="fa fa-link"></i></a>{/block:IndexPage}
             </footer>
           </blockquote>
         {/block:Quote}
