--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -92,12 +92,6 @@
   padding-top: $rythm-tick * 2;
   padding-bottom: $rythm-tick * 2;
 
-  a {
-    display: inline-block;
-    margin: -.5em -.25em;
-    padding: .5em;
-  }
-
   h1 {
     display: inline-block;
 
@@ -108,6 +102,12 @@
         color: $color-accent;
       }
     }
+  }
+
+  .fa {
+    display: inline-block;
+    margin: -.5em -.25em;
+    padding: .5em;
   }
 
   @include breakpoint(phablet) {
@@ -136,6 +136,10 @@
     color: $color-minor;
     text-transform: uppercase;
     font-size: .83rem;
+  }
+
+  cite * {
+    display: inline-block;
   }
 
   .permalink {
