Fix invalid width for tablet breakpoint in the mixin

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,7 +16,7 @@
 
   } @else if $breakpoint == tablet {
 
-    @media (max-width: $breakpoint-phablet) {
+    @media (max-width: $breakpoint-tablet) {
       @content;
     }
 
