--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -8,9 +8,10 @@
     <link href="//fonts.googleapis.com/css?family=Lora:400,400italic" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="//assets.ubermost.com/styles/main.css" rel="stylesheet"> -->
     <link href="//assets.ubermost.com/styles/main.css" rel="stylesheet">
     <link href="{PortraitURL-128}" rel="apple-touch-icon">
-    <link href="{RSS}" rel="alternate" type="application/rss+xml">
+    <link href="http://feeds.feedburner.com/ubermost" rel="alternate" type="application/rss+xml">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -18,21 +19,30 @@
   </head>
   <body>
     <header class="top">
-      <p><h1><a href="{BlogURL}">Ubermost</a></h1> is a non-daily dose of insightful snippets from books and other pieces of writing. On entrepreneurship, motivation, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" title="Ubermost on Facebook" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" title="Ubermost on Instagram" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" title="Ubermost on Twitter" class="fa fa-twitter"></a>.</p>
+      <a href="{BlogURL}" class="logo"><img src="{PortraitURL-128}" alt=""></a>
+      <p><h1><a href="{BlogURL}">Ubermost</a></h1> is a daily dose of sketchnotes with wisdom from books and other pieces of writing. On motivation, entrepreneurship, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" title="Ubermost on Facebook" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" title="Ubermost on Instagram" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" title="Ubermost on Twitter" class="fa fa-twitter"></a>.</p>
     </header>
 
     <hr>
 
     {block:Posts}
-      {block:Quote}
-        <blockquote class="quote">
-          <div>{Quote}</div>
-          <footer>
-            {block:Source}&mdash; <cite>{Source}</cite>{/block:Source}
-            {block:IndexPage}<a href="{Permalink}" class="permalink" title="Permalink"><i class="fa fa-link"></i></a>{/block:IndexPage}
-          </footer>
-        </blockquote>
-      {/block:Quote}
+      <article class="post">
+        {block:Photo}
+          <figure class="image">
+            <img src="{PhotoURL-HighRes}" alt="{PhotoAlt}">
+          </figure>
+          {block:Caption}
+            <div class="text">
+              {Caption}
+            </div>
+          {/block:Caption}
+          {block:IndexPage}
+            <div class="permalink">
+              <a href="{Permalink}" class="permalink" title="Permalink"><i class="fa fa-link"></i></a>
+            </div>
+          {/block:IndexPage}
+        {/block:Photo}
+      </article>
       {block:Posts}{PostNotes}{/block:Posts}
     {/block:Posts}
 
