--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <header class="top">
-      <a href="{BlogURL}" class="logo"><img src="{PortraitURL-128}" alt=""></a>
-      <p><h1><a href="{BlogURL}">Ubermost</a></h1> is a daily dose of sketchnotes with wisdom from books and other pieces of writing. On motivation, entrepreneurship, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" title="Ubermost on Facebook" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" title="Ubermost on Instagram" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" title="Ubermost on Twitter" class="fa fa-twitter"></a>.</p>
+      <a href="{BlogURL}" class="logo"><img src="//assets.ubermost.com/images/logo.svg" alt=""></a>
+      <p>Daily dose of sketchnotes with wisdom from books and other pieces of writing. On motivation, entrepreneurship, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" title="Ubermost on Facebook" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" title="Ubermost on Instagram" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" title="Ubermost on Twitter" class="fa fa-twitter"></a>.</p>
     </header>
 
     <hr>
