Change <figure> tag to anchor for photo

--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -30,9 +30,9 @@
     {block:Posts}
       <article class="post">
         {block:Photo}
-          <figure class="image">
+          <a href="{Permalink}" class="image">
             <img src="{PhotoURL-HighRes}" alt="{PhotoAlt}">
-          </figure>
+          </a>
           {block:Caption}
             <div class="text">
               {Caption}
