--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -8,14 +8,13 @@
     <link href="//fonts.googleapis.com/css?family=Lora:400,400italic" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- <link href="//assets.ubermost.com/styles/main.css" rel="stylesheet"> -->
     <link href="//assets.ubermost.com/styles/main.css" rel="stylesheet">
     <link href="{PortraitURL-128}" rel="apple-touch-icon">
     <link href="http://feeds.feedburner.com/ubermost" rel="alternate" type="application/rss+xml">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script src="//static.tumblr.com/q0etgkr/EIBmz7s0p/infinitescrolling.js"></script>
+    <!-- <script src="//static.tumblr.com/q0etgkr/EIBmz7s0p/infinitescrolling.js"></script> -->
   </head>
   <body>
     <header class="top">
@@ -38,11 +37,19 @@
               {Caption}
             </div>
           {/block:Caption}
-          {block:IndexPage}
-            <div class="permalink">
-              <a href="{Permalink}" class="permalink" title="Permalink"><i class="fa fa-link"></i></a>
+            <div class="meta">
+              <p class="date"><a href="{Permalink}">Posted on <time datetime="{Year}-{MonthNumberWithZero}-{DayOfMonthWithZero}" pubdate>{Month} {DayOfMonth}{DayOfMonthSuffix}, {Year}</time></a>.</p>
+              <ul class="links">
+                <li>
+                  {LikeButton size=30}
+                  <i class="fa fa-heart"></i>
+                </li>
+                <li>
+                  {ReblogButton size=30}
+                  <i class="fa fa-retweet"></i>
+                </li>
+              </ul>
             </div>
-          {/block:IndexPage}
         {/block:Photo}
       </article>
       {block:Posts}{PostNotes}{/block:Posts}
