Change vertical padding for mobile devices

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -9,6 +9,11 @@
   margin-right: auto;
   padding-left: $rythm-tick;
   padding-right: $rythm-tick;
+
+  @include breakpoint(phablet) {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
 
 %block {
