--- a/source/styles/blocks/_post.scss
+++ b/source/styles/blocks/_post.scss
@@ -58,4 +58,17 @@
       }
     }
   }
+
+  @include breakpoint(phone) {
+    padding-top: 0;
+
+    &:before {
+      display: none;
+    }
+
+    .image {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
 }
