--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,13 +8,12 @@
     <link href="//fonts.googleapis.com/css?family=Lora:400,400italic" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="//assets.ubermost.com/styles/main.css" rel="stylesheet">
+    <link href="//assets.ubermost.com/styles/main.min.css" rel="stylesheet">
     <link href="{PortraitURL-128}" rel="apple-touch-icon">
     <link href="http://feeds.feedburner.com/ubermost" rel="alternate" type="application/rss+xml">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <!-- <script src="//static.tumblr.com/q0etgkr/EIBmz7s0p/infinitescrolling.js"></script> -->
   </head>
   <body>
     <header class="top">
@@ -61,7 +60,5 @@
         {block:NextPage}<a rel="next" href="{NextPage}">&rarr;</a>{/block:NextPage}
       </nav>
     {/block:Pagination}
-
-    <script src="//assets.ubermost.com/scripts/analytics.js" async></script>
   </body>
 </html>
