--- a/src/styles/blocks/_top.scss
+++ b/src/styles/blocks/_top.scss
@@ -8,7 +8,7 @@
   padding-top: $rythm-tick * 2;
   padding-bottom: $rythm-tick * 2;
 
-  .logo {
+  &__logo {
     margin-bottom: $rythm-tick;
 
     a {
