--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,10 +17,10 @@
   </head>
   <body>
     <header class="top">
-      <h1 class="logo">
-        <a href="{BlogURL}" class="logo"><img src="//assets.ubermost.com/images/logo.svg" alt=""></a>
+      <h1 class="top__logo">
+        <a href="{BlogURL}" class="top__logo"><img src="//assets.ubermost.com/images/logo.svg" alt=""></a>
       </h1>
-      <p>Daily dose of sketchnotes with wisdom from books and other pieces of writing. On motivation, entrepreneurship, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" title="Ubermost on Facebook" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" title="Ubermost on Instagram" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" title="Ubermost on Twitter" class="fa fa-twitter"></a> and <a href="http://ello.co/ubermost">Ello</a>.</p>
+      <p class="top__about">Daily dose of sketchnotes with wisdom from books and other pieces of writing. On motivation, entrepreneurship, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" title="Ubermost on Facebook" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" title="Ubermost on Instagram" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" title="Ubermost on Twitter" class="fa fa-twitter"></a> and <a href="http://ello.co/ubermost">Ello</a>.</p>
     </header>
 
     <hr>
@@ -28,17 +28,17 @@
     {block:Posts}
       <article class="post">
         {block:Photo}
-          <a href="{Permalink}" class="image">
+          <a href="{Permalink}" class="post__image">
             <img src="{PhotoURL-HighRes}" alt="{PhotoAlt}">
           </a>
           {block:Caption}
-            <div class="text">
+            <div class="post__text">
               {Caption}
             </div>
           {/block:Caption}
-            <div class="meta">
-              <p class="date"><a href="{Permalink}">Posted on <time datetime="{Year}-{MonthNumberWithZero}-{DayOfMonthWithZero}" pubdate>{Month} {DayOfMonth}{DayOfMonthSuffix}, {Year}</time></a>.</p>
-              <ul class="links">
+            <div class="post__meta">
+              <p class="post__date"><a href="{Permalink}">Posted on <time datetime="{Year}-{MonthNumberWithZero}-{DayOfMonthWithZero}" pubdate>{Month} {DayOfMonth}{DayOfMonthSuffix}, {Year}</time></a>.</p>
+              <ul class="post__links">
                 <li>
                   {LikeButton size=30}
                   <i class="fa fa-heart"></i>
