--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,15 +1,23 @@
-$breakpoint-laptop: 1440px;
-$breakpoint-tablet: 1024px;
-$breakpoint-phablet: 736px;
-$breakpoint-phone: 480px;
+$breakpoints: (
+  'laptop'  : (max-width: 1440px),
+  'tablet'  : (max-width: 1024px),
+  'phablet' : (max-width: 736px),
+  'phone'   : (max-width: 480px),
+);
 
-$rythm-tick: 1.66rem;
+$tick : 25px;
 
-$color-accent: #ffcd44;
-$color-base: #313130;
-$color-minor: #888887;
+$size--base  : 18px;
+$size--minor : 15px;
 
-$font-serif: Lora, Georgia, serif;
-$font-sans-serif: 'Source Sans Pro', Arial, sans-serif;
+$color--accent: #ffcd44;
+$color--base: #313130;
+$color--minor: #888887;
 
-$width-wrapper: $rythm-tick * 20;
+$font--serif: Lora, Georgia, serif;
+$font--sans: 'Source Sans Pro', Arial, sans-serif;
+
+$width--wrapper : $tick * 20;
+$width--body    : 900px;
+$width--left    : $width--body / 1.61803398875;
+$width--right   : $width--body - $width--left;
