--- a/src/styles/blocks/_top.scss
+++ b/src/styles/blocks/_top.scss
@@ -22,6 +22,12 @@
     }
   }
 
+  &__about {
+    a {
+      text-decoration: underline;
+    }
+  }
+
   .fa {
     display: inline-block;
     margin: -0.5em -0.25em;
