--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,7 +19,7 @@
       <h1 class="top__logo">
         <a href="{BlogURL}" class="top__logo"><img src="//assets.ubermost.com/images/logo.svg" alt=""></a>
       </h1>
-      <p class="top__about">Daily dose of sketchnotes with wisdom from books and other pieces of writing. On motivation, entrepreneurship, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost" title="Ubermost on Facebook" class="fa fa-facebook"></a> <a href="http://instagram.com/ubermost" title="Ubermost on Instagram" class="fa fa-instagram"></a> <a href="http://twitter.com/ubermost" title="Ubermost on Twitter" class="fa fa-twitter"></a> and <a href="http://ello.co/ubermost">Ello</a>.</p>
+      <p class="top__about">Daily dose of sketchnotes with wisdom from books and other pieces of writing. On motivation, entrepreneurship, communication and self-awareness. Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost">Facebook</a> and <a href="http://instagram.com/ubermost">Instagram</a>.</p>
     </header>
 
     <hr>
