Add styling for small inside of post

--- a/src/styles/blocks/_post.scss
+++ b/src/styles/blocks/_post.scss
@@ -5,6 +5,11 @@
 .post {
   @extend %block;
 
+  small {
+    color: #ddd;
+    font-size: 100%;
+  }
+
   &__image {
     @extend %container;
     @extend %text;
