--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -11,8 +11,8 @@ html {
     background: $color--accent;
   }
 
-  @include breakpoint(phablet) {
-    font-size: rem($size--base) * 0.8;
+  @include breakpoint(phone) {
+    font-size: rem($size--base) * 0.9;
   }
 }
 
