--- a/src/styles/blocks/_notes.scss
+++ b/src/styles/blocks/_notes.scss
@@ -5,6 +5,7 @@
 .notes {
   @extend %block;
   @extend %minor;
+  padding-left: 0;
 
   img {
     display: none;
@@ -24,5 +25,9 @@
         color: $color--accent;
       }
     }
+  }
+
+  @include breakpoint(phablet) {
+    font-size: 0.9rem;
   }
 }
