--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//assets.ubermost.com/styles/main.min.css" rel="stylesheet">
     <link href="{PortraitURL-128}" rel="apple-touch-icon">
-    <link rel="shortcut icon" href="//assets.ubermost.com/images/favicon.jpg">
+    <link rel="shortcut icon" href="//assets.ubermost.com/images/favicon.png">
     <link href="http://feeds.feedburner.com/ubermost" rel="alternate" type="application/rss+xml">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
