--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,8 +1,8 @@
 $breakpoints: (
-  'laptop'  : (max-width: 1440px),
-  'tablet'  : (max-width: 1024px),
-  'phablet' : (max-width: 736px),
-  'phone'   : (max-width: 636px),
+  'laptop'  : 'max-width: 1440px',
+  'tablet'  : 'max-width: 1024px',
+  'phablet' : 'max-width: 736px',
+  'phone'   : 'max-width: 636px',
 );
 
 $tick : 30px;
@@ -10,12 +10,12 @@ $tick : 30px;
 $size--base  : 18px;
 $size--minor : 15px;
 
-$color--accent: #ffcd44;
-$color--base: #313130;
-$color--minor: #888887;
+$color--accent : #ffcd44;
+$color--base   : #313130;
+$color--minor  : #888887;
 
-$font--serif: Lora, Georgia, serif;
-$font--sans: 'Source Sans Pro', Arial, sans-serif;
+$font--serif : (Lora, Georgia, serif);
+$font--sans  : ('Source Sans Pro', Arial, sans-serif);
 
 $width--wrapper : $tick * 20;
 $width--body    : 900px;
