--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -37,8 +37,7 @@ a {
   transition: color 250ms;
   text-decoration: none;
 
-  &:hover,
-  &:focus {
+  &:hover {
     color: $color--accent;
   }
 }
