--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -4,63 +4,71 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Name</title>
+    <title>Make your own version of Ubermost lettering! &mdash; Ubermost</title>
+    <link rel="shortcut icon" href="//assets.ubermost.com/images/favicon.png">
     <link href="styles/main.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="scripts/modernizr.min.js"></script>
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title"><a href="#" rel="index">Ubermost Share</a></h1>
-      <p class="header__about">Maecenas faucibus mollis interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-    </header>
-
-    <main>
-      <div class="column column--left">
-        <div class="picture">
-          <img src="" alt="">
-        </div>
-        <ul class="share">
-          <li>Facebook</li>
-          <li>Twitter</li>
+      <div class="header__body">
+        <a href="{BlogURL}" class="header__body__logo">
+          <img src="//assets.ubermost.com/images/logo-alt.svg" alt="">
+        </a>
+        <ul class="header__body__menu">
+          <li><a href="http://ubermost.com">Blog</a></li>
+          <li><a href="http://facebook.com/ubermost">Facebook</a></li>
+          <li><a href="http://instagram.com/ubermost">Instagram</a></li>
         </ul>
       </div>
+    </header>
 
-      <div class="column column--right">
-        <section class="option">
-          <h2 class="option__heading">Quote</h2>
-          <select name="quote">
-            <option></option>
-            {% for i in 1..10 %}
-              <option>Quote #{{ i }}</option>
-            {% endfor %}
-          </select>
-        </section>
+    <main class="main">
+      <div class="main__preview">
+        <div class="preview">
+          <img src="//40.media.tumblr.com/d6fe3193b7215a9d21cbc315a5562316/tumblr_ns5ky5ZAVc1upn40oo1_1280.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="main__options">
         <section class="option">
           <h2 class="option__heading">Colors</h2>
-          {% for i in 1..10 %}
-            <label>
-              <input type="radio" name="color" value="{{ i }}">
-              <img src="" alt="">
+          {% set colors = ['#592A2C', '#496822', '#F1F0EC', '#87B9B9', '#413D31', '#CFDDA6', '#000000', '#CAB344', '#163B5F'] %}
+          {% for index, color in colors %}
+            <label class="color" style="background: {{ color }}">
+              <input type="radio" name="color" value="{{ index }}">
             </label>
           {% endfor %}
         </section>
         <section class="option">
           <h2 class="option__heading">Size</h2>
-          <ul class="sizes">
-            <li><a href="#">iPhone 5/5s</a></li>
-            <li><a href="#">iPhone 6</a></li>
-            <li><a href="#">iPhone 6 Plus</a></li>
-            <li><a href="#">iPad</a></li>
-            <li><a href="#">1280x800</a></li>
-            <li><a href="#">1600x1200</a></li>
-            <li><a href="#">2880x1400</a></li>
-          </ul>
+          <select name="quote">
+            <option>Select your screen size</option>
+            <option>iPhone 5/5s</option>
+            <option>iPhone 6</option>
+            <option>iPhone 6 Plus</option>
+            <option>iPad</option>
+            <option>1280x800</option>
+            <option>1600x1200</option>
+            <option>2880x1400</option>
+          </select>
+        </section>
+        <section class="download">
+          <a href="#" class="download__button">Download wallpaper</a>
+          <span class="download__or"><span>or share</span></span>
+          <a href="#" class="download__button download__button--share download__button--facebook"><i class="fa fa-facebook"></i></a>
+          <a href="#" class="download__button download__button--share download__button--pinterest"><i class="fa fa-pinterest-p"></i></a>
+          <a href="#" class="download__button download__button--share download__button--twitter"><i class="fa fa-twitter"></i></a>
         </section>
       </div>
     </main>
 
     <footer class="footer">
-      <small>&copy; 2015 <a href="http://ubermost.com">Ubermost</a>. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
+      <div class="footer__body">
+        <p class="footer__body__about">Create your own version of your favourite lettering!</p>
+        <small class="footer__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a> website. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
+      </div>
     </footer>
 
     <script src="scripts/main.min.js"></script>
